--- a/frontend/src/component/Product/Products.css
+++ b/frontend/src/component/Product/Products.css
@@ -1,19 +1,76 @@
+.productsPage {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.filters {
+  background: rgb(241, 241, 241);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.filters > div {
+  display: flex;
+  margin: 1.5vmax 0;
+  padding: 0 1vmax;
+}
+
+.filters > div > h3 {
+  font: 1.5vmax Poppins;
+  margin-right: 1vmax;
+}
+
+.filters > div > select {
+  padding: 0 1vmax;
+  font: 1.1vmax Poppins;
+  border: 1px solid rgb(219, 219, 219);
+  outline: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+@media screen and (max-width: 600px) {
+  .filters {
+    flex-wrap: wrap;
+    width: 95%;
+  }
+
+  .filters > div > h3 {
+    font-size: 1.8vmax;
+  }
+
+  .filters > div > select {
+    font-size: 1.2vmax;
+    padding: 0.5vmax 0.5vmax;
+  }
+}
+
+.greyContainer {
+  background: rgb(241, 241, 241);
+  width: 96%;
+  border-radius: 30px;
+  margin: 1vmax auto;
+  padding: 0.5vmax 0.5vmax;
+}
+
 .productsHeading {
   margin: 2vmax auto;
   width: 15vw;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.171);
   padding: 2vmax;
-  color: rgba(0, 0, 0, 0.678);
-  font: 500 1.5vmax "Roboto";
   text-align: center;
+  font-family: Poppins;
+  font-size: 3.5vmax;
 }
 
 .products {
   display: flex;
+  margin: 0 auto;
+  width: 90vw;
   flex-wrap: wrap;
-  padding: 0 5vmax;
   justify-content: center;
-  min-height: 30vh;
+  max-width: 100%;
 }
 
 .paginationBox {
@@ -93,7 +150,7 @@
   border: 1px solid rgba(0, 0, 0, 0.329);
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-aspect-ratio: 9/20) {
   .filterBox {
     width: 20vmax;
     position: static;
@@ -105,5 +162,9 @@
   }
   .category-link {
     font: 400 1.8vmax "Roboto";
+  }
+
+  .products {
+    width: 100vw;
   }
 }
