--- a/frontend/src/component/Cart/ConfirmOrder.css
+++ b/frontend/src/component/Cart/ConfirmOrder.css
@@ -1,127 +1,207 @@
 .confirmOrderPage {
-  height: 100vh;
-  background-color: white;
-  display: grid;
-  grid-template-columns: 6fr 3fr;
+  height: 100%;
+  background-color: rgb(241, 241, 241);
+  display: flex;
 }
 
-.confirmOrderPage > div:last-child {
-  border-left: 1px solid rgba(0, 0, 0, 0.247);
+.left {
+  flex: 65%;
 }
 
 .confirmshippingArea {
-  padding: 5vmax;
-  padding-bottom: 0%;
+  background: white;
+  padding: 2vmax 2vmax 1vmax;
+  width: 95%;
+  margin: 0 auto;
+  border-radius: 10px;
 }
 
-.confirmshippingArea > p {
-  font: 400 1.8vmax "Roboto";
+.confirmshippingArea > h2 {
+  font: 2vmax Poppins;
+  padding-bottom: 0.5vmax;
 }
 
 .confirmshippingAreaBox,
 .confirmCartItemsContainer {
-  margin: 2vmax;
+  margin: 0vmax 3vmax;
+  display: flex;
+  flex-direction: column;
 }
 
 .confirmshippingAreaBox > div {
   display: flex;
-  margin: 1vmax 0;
+  margin: 0.8vmax 0;
+  align-items: flex-end;
 }
 
 .confirmshippingAreaBox > div > p {
-  font: 400 1vmax "Roboto";
-  color: black;
+  font: 1.3vmax Poppins;
 }
 .confirmshippingAreaBox > div > span {
   margin: 0 1vmax;
-  font: 100 1vmax "Roboto";
+  font: 1.2vmax Poppins;
   color: #575757;
 }
 
-.confirmCartItems > p {
-  font: 400 1.8vmax "Roboto";
+.edit {
+  align-self: flex-end;
+  border-top: none;
+}
+
+.edit > button {
+  font: 1.2vmax Poppins;
+  padding: 0.3vmax 1.4vmax;
+  background: rgb(4, 116, 228);
+  color: white;
+  border-radius: 7px;
+  border: none;
+}
+
+.edit>button:hover {
+  background: rgb(39, 129, 219);
+  cursor: pointer;
+}
+
+.edit2 {
+  align-self: flex-end;
+  border-top: none;
+  margin: 0vmax 3vmax 2vmax;
+}
+
+.edit2>button {
+  font: 1.2vmax Poppins;
+  padding: 0.3vmax 1.4vmax;
+  background: rgb(4, 116, 228);
+  color: white;
+  border-radius: 7px;
+  border: none;
+}
+
+.edit2>button:hover {
+  background: rgb(39, 129, 219);
+  cursor: pointer;
 }
 
 .confirmCartItems {
-  padding: 5vmax;
-  padding-top: 2vmax;
+  background: white;
+  margin: 1.2vmax auto;
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
 }
 
-.confirmCartItemsContainer {
+.confirmCartItems > h2 {
+  font: 2vmax Poppins;
+  padding: 2vmax;
+  padding-bottom: 2vmax;
+}
+
+.cartHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cartHeader>p {
+  margin: 0 4vmax;
+  font-size: 1.2vmax;
+  color: grey;
+}
+
+/* .confirmCartItemsContainer {
   max-height: 20vmax;
   overflow-y: auto;
-}
+} */
 
 .confirmCartItemsContainer > div {
   display: flex;
-  font: 400 1vmax "Roboto";
+  justify-content: flex-start;
+  font: 1.1vmax Poppins;
   align-items: center;
-  justify-content: space-between;
-  margin: 2vmax 0;
+  margin: 1.5vmax 0;
+  border-top: 1px solid black;
+  padding: 1vmax 0;
 }
 
 .confirmCartItemsContainer > div > img {
-  width: 3vmax;
+  width: 10vmax;
 }
 
 .confirmCartItemsContainer > div > a {
-  color: #575757;
-  margin: 0 2vmax;
-  width: 60%;
+  margin: 1.5vmax 2vmax;
+  width: 50%;
   text-decoration: none;
+  align-self: flex-start;
+  color: black;
 }
 
 .confirmCartItemsContainer > div > span {
-  font: 100 1vmax "Roboto";
-  color: #5e5e5e;
+  font: 1.1vmax Poppins;
+  color: black;
+  margin-left: auto;
+  margin-top: 1.5vmax;
+  align-self: flex-start;
+}
+
+.right {
+  flex: 25%;
 }
 
 .orderSummary {
-  padding: 7vmax;
+  background: white;
+  width: 95%;
+  height: fit-content;
+  border-radius: 10px;
 }
 
-.orderSummary > p {
-  text-align: center;
-  font: 400 1.8vmax "Roboto";
-  border-bottom: 1px solid rgba(0, 0, 0, 0.267);
-  padding: 1vmax;
-  width: 100%;
-  margin: auto;
-  box-sizing: border-box;
+.orderSummary > h3 {
+  color: grey;
+  padding: 1.5vmax 1vmax;
+  border-bottom: 1px solid grey;
+  font-size: 2vmax;
 }
 
 .orderSummary > div > div {
   display: flex;
-  font: 300 1vmax "Roboto";
+  font: 1.45vmax Poppins;
   justify-content: space-between;
-  margin: 2vmax 0;
+  margin: 2vmax 1.2vmax;
 }
 .orderSummary > div > div > span {
   color: rgba(0, 0, 0, 0.692);
 }
 
+.free {
+  color: green;
+}
+
 .orderSummaryTotal {
-  display: flex;
-  font: 300 1vmax "Roboto";
-  justify-content: space-between;
-  border-top: 1px solid rgba(0, 0, 0, 0.363);
-  padding: 2vmax 0;
+
+  margin: 2vmax 1.2vmax;
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.7vmax;
+    border-top: 1px dashed grey;
+    border-bottom: 1px dashed grey;
+    padding: 15px 0;
 }
 
 .orderSummary > button {
-  background-color: tomato;
-  color: white;
-  width: 100%;
-  padding: 1vmax;
-  border: none;
-  margin: auto;
-  cursor: pointer;
-  transition: 0.5s;
-  font: 400 1vmax "Roboto";
+  font-size: 1.7vmax;
+    width: 100%;
+    background: rgb(4, 116, 228);
+    color: white;
+    border: none;
+    border-radius: 10px;
+    padding: 0.4vmax 0vmax;
+    margin: 1vmax 1.2vmax;
+    width: 90%;
 }
 
 .orderSummary > button:hover {
-  background-color: rgb(192, 71, 50);
+  background: rgb(39, 129, 219);
+    cursor: pointer;
 }
 
 @media screen and (max-width: 600px) {
