--- a/frontend/src/component/Cart/payment.css
+++ b/frontend/src/component/Cart/payment.css
@@ -1,12 +1,237 @@
+body {
+  font-family: Poppins;
+}
+
+.paymentPage {
+  width: 80%;
+  height: 92vh;
+  margin: 0 auto;
+}
+
+.paymentPage > h1 {
+  font: bolder 3vmax Poppins;
+  margin: 4vmax 1vmax;
+}
+
+.paymentPage> h2 {
+  font: bold 1.8vmax Poppins;
+  margin: 2vmax 1vmax;
+}
+
+.paymentCardContainer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.paymentCard {
+  width: 40%;
+  margin: 1vmax 1.5vmax;
+  padding: 1.2vmax;
+  border: 0.5px solid rgb(202, 202, 202);
+  border-radius: 10px;
+  min-height: 7vmax;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-basis: 40%;
+  transition: all 0.1s;
+}
+
+.paymentCard:hover {
+  cursor: pointer;
+  border-color: rgb(51, 51, 51);
+}
+
+.paymentCard > h3 {
+  font: bold 1.5vmax Poppins;
+  width: 70%;
+}
+
+.paymentCard > p {
+  font: 1vmax Poppins;
+  width: 50%;
+}
+
+.cardContainer {
+  margin: 0 3vmax;
+  width: 45vmax;
+  display: flex;
+  flex-direction: column;
+}
+
+.back {
+  display: flex;
+  color: blue;
+  cursor: pointer;
+}
+
+.backBtn {
+  margin-left: 0.2vmax;
+}
+
+.backBtn:hover {
+  text-decoration: underline;
+}
+
+.cardContainer > h3 {
+  font: 1.3vmax Poppins;
+  margin: 3vmax 2vmax 2vmax;
+}
+
+.cardNumberInput {
+  width: 40vmax;
+  margin: 1vmax 2vmax 0vmax;
+  padding: 1.8vmax 1vmax;
+  border: 0.5px solid grey;
+  border-radius: 10px;
+}
+
+.flex {
+  display: flex;
+  align-items: center;
+}
+
+.cardExpiryInput {
+  width: 25vmax;
+  margin: 2vmax 1vmax 2vmax 2vmax;
+  padding: 1.8vmax 1vmax;
+  border: 0.5px solid grey;
+  border-radius: 10px;
+}
+
+.cardCvcInput {
+  width: 10vmax;
+  margin: 2vmax 2vmax 2vmax 1vmax;
+  padding: 1.8vmax 1vmax;
+  border: 0.5px solid grey;
+  border-radius: 10px;
+}
+
+.payBtn {
+  /* width: 10vmax; */
+  text-align: center;
+  align-self: flex-end;
+  font: 1.4vmax Poppins;
+  margin: 1.5vmax 2.2vmax 1vmax;
+  padding: 0.6vmax 2vmax;
+  background: rgb(4, 116, 228);
+  color: white;
+  border: none;
+  border-radius: 10px;
+}
+
+.payBtn:hover {
+  background: rgb(39, 129, 219);
+  cursor: pointer;
+}
+
+
+
+/* body {
+  background: rgb(241,241,241);
+} */
+
+
+/* 
 .paymentContainer {
   display: grid;
   place-items: center;
-  background-color: rgb(255, 255, 255);
   height: 65vh;
+  margin: 2vmax;
+} */
+
+/* .paymentContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
   margin: 2vmax;
 }
 
-.paymentForm {
+.collapsibleContainer {
+  background: white;
+  width: 35vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2vmax 0;
+  height: fit-content;
+  box-shadow: 4px 8px 12px rgba(15, 15, 15, 0.26);
+}
+
+.collapse {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 0.5vmax 0;
+}
+
+.collapse > button {
+  width: 100%;
+  font: 1.5vmax Poppins;
+  border: 2px solid rgb(196, 196, 196);
+  border-radius: 7px;
+  background: black;
+  color: white;
+}
+
+.collapse > button:hover {
+  cursor: pointer;
+}
+
+.collapseContentContainer {
+  width: 100%;
+}
+
+.credit {
+  width: 100%;
+  margin: 1vmax 0;
+  border: 0.5px solid grey;
+  padding: 1vmax 0;
+  border-radius: 7px;
+}
+
+.credit > form > div {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.paymentIcon {
+  margin: 1vmax 1vmax 1vmax 2vmax;
+  transform: scale(1.3);
+}
+
+.paymentInput {
+  width: 70%;
+  padding: 0.5vmax 1vmax;
+  border: 0.5px solid grey;
+  border-radius: 5px;
+}
+
+.paymentFormBtn {
+  margin: 1vmax auto 0.5vmax;
+  font: 1.2vmax Poppins;
+  padding: 0.5vmax 1vmax 0.5vmax;
+  border-radius: 7px;
+  color: black;
+  background: yellow;
+  border: 0.5px solid black;
+}
+
+.paymentFormBtn:hover {
+  background: rgb(233, 233, 0);
+  cursor: pointer;
+}
+
+.hidden {
+  display: none;
+} */
+
+/* .paymentForm {
   width: 22%;
   height: 100%;
 }
@@ -87,4 +312,4 @@
     font: 300 4vw "Roboto";
     padding: 4vw;
   }
-}
+} */
