--- a/frontend/src/component/Product/ProductCard.css
+++ b/frontend/src/component/Product/ProductCard.css
@@ -1,11 +1,11 @@
-.productCardHome {
+.productCardProduct {
     width: 20vmax;
     display: flex;
     flex-direction: column;
     text-decoration: none;
     color: rgb(48, 48, 48);
     margin: 2vmax 1vmax;
-    transition: all 0.5s;
+    transition: all 0.4s;
     padding-bottom: 0.5vmax;
     background-color: white;
     border-radius: 12px;
@@ -16,7 +16,7 @@
     flex-basis: 20%;
 }
 
-.productCardHome>img {
+.productCardProduct>img {
     width: 17vmax;
     height: 17vmax;
     object-fit: scale-down;
@@ -24,11 +24,11 @@
     /* background: rgb(241, 241, 241); */
 }
 
-.productCardHome>p {
+.productCardProduct>p {
     align-self: start;
 }
 
-.productCardHome>div {
+.productCardProduct>div {
     margin: 0.5vmax;
     display: flex;
     justify-content: flex-start;
@@ -41,47 +41,46 @@
     font: 300 0.7vmax "Roboto";
 }
 
-.productCardHome>p {
-    font-family: Poppins;
-    font-size: 1.2vmax;
+.productCardProduct>p {
+    font: bold 1.2vmax Poppins;
     margin: 1vmax 0.5vmax;
     margin-bottom: 0;
 }
 
-.productCardHome>span {
+.productCardProduct>span {
     margin: 0.5vmax;
     color: tomato;
-    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-    font-size: 1vmax;
+    font: 1.3vmax "Roboto";
     align-self: flex-start;
 }
 
-.productCardHome:hover {
-    box-shadow: 4px 8px 12px rgba(15, 15, 15, 0.26);
+.productCardProduct:hover {
+    box-shadow: 0px 0px 6px 0px rgba(104, 104, 104, 0.26);
 
-    transform: scale(1.05);
+    /* transform: scale(1.02); */
+    transform: scale(1.02);
 }
 
 @media screen and (max-width: 600px) {
 
-    .productCardHome {
+    .productCardProduct {
         width: 21vmax;
     }
 
-    .productCardHome>p {
+    .productCardProduct>p {
         font-size: 1.7vmax;
     }
 
-    .productCardHome>div {
+    .productCardProduct>div {
         margin: 0vmax;
         display: block;
     }
 
-    .productCardHome>span {
+    .productCardProduct>span {
         font-size: 1.5vmax;
     }
 
-    .productCardHome>div>span {
+    .productCardProduct>div>span {
         margin: 0 0.5vmax;
         font: 300 1vmax "Roboto";
     }
