--- a/frontend/src/component/layout/Footer/Footer.css
+++ b/frontend/src/component/layout/Footer/Footer.css
@@ -1,4 +1,174 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
 footer {
+  display: flex;
+  flex-direction: column;
+}
+
+.top {
+  background: rgb(223, 223, 223);
+  display: flex;
+}
+
+.first, .second {
+  flex-basis: 17%;
+  display: flex;
+  flex-direction: column;
+  padding: 3vmax 0 3vmax 4vmax;
+}
+
+.first > h3, .second > h3 {
+  margin: 0 0 2.3vmax 0;
+  font: bold 2vmax Poppins;
+}
+
+.first > a, .second > a {
+  margin: 0 0 0.8vmax 0;
+  font: 1.3vmax Poppins;
+  cursor: pointer;
+}
+
+.third {
+  flex-basis: 36%;
+  display: flex;
+  flex-direction: column;
+  padding: 3vmax 0 3vmax 4vmax;
+}
+
+.third > h3 {
+  margin: 0 0 1vmax 0;
+  font: bold 2vmax Poppins;
+}
+
+.third > p {
+  margin: 0 0 0.5vmax 0;
+  font: 1.3vmax Poppins;
+  width: 90%;
+}
+
+.subscribeForm {
+  display: flex;
+  flex-direction: column;
+  margin: 1vmax 0;
+  width: 90%;
+}
+
+.subscribeForm > input {
+  margin: 0.8vmax 0;
+  padding: 0.6vmax 1vmax;
+  font: 1.3vmax Poppins;
+  border-radius: 7px;
+  border: 0.8px solid grey;
+  width: 80%;
+  outline: none;
+}
+
+.subscribeForm > button {
+  margin: 0.8vmax 0;
+  font: 1.5vmax Poppins;
+  padding: 0.5vmax 2vmax;
+  width: fit-content;
+  background: rgb(4, 116, 228);
+  color: white;
+  border: none;
+  border-radius: 7px;
+}
+
+.subscribeForm > button:hover {
+  background: rgb(39, 129, 219);
+  cursor: pointer;
+}
+
+.fourth {
+  flex-basis: 30%;
+  display: flex;
+  flex-direction: column;
+  padding: 3vmax 0 3vmax 4vmax;
+}
+
+.fourth > h3 {
+  margin: 0 0 2vmax 0;
+  font: bold 2vmax Poppins;
+}
+
+.fourth > a {
+  font: bold 1.5vmax Poppins;
+  cursor: pointer;
+}
+
+.socialIcons {
+  display: flex;
+}
+
+.socialIcons > a {
+  width: auto;
+  height: 3vmax;
+  display: block;
+  margin: 2vmax 1vmax 0 0;
+}
+
+.socialIcons > a:last-child {
+  /* background: white; */
+  display: flex;
+  height: 3vmax;
+  border-radius: 10px;
+}
+
+.socialIcons > a > img {
+  height: 3vmax;
+  transition: all 0.2s;
+}
+
+.socialIcons > a:last-child > img {
+  width: auto;
+}
+
+.socialIcons > a > img:hover {
+  transform: scale(1.09);
+  cursor: pointer;
+}
+
+
+.bottom {
+  background: black;
+  color: white;
+  display: flex;
+}
+
+.bottomLeft {
+  flex-basis: 40%;
+}
+
+.bottomLeft > p {
+  font: 1.1vmax Poppins;
+  margin: 2vmax;
+}
+
+.bottomRight {
+  flex-basis: 60%;
+}
+
+.paymentIcons {
+  height: 4vmax;
+  width: 40vmax;
+  margin: 1vmax 6vmax 1vmax auto;
+  display: flex;
+  align-items: center;
+}
+
+.paymentIcons > a {
+  width: auto;
+  height: 2.5vmax;
+  margin: 0 0.9vmax 0 0;
+  border-radius: 3px;
+}
+
+.paymentIcons > a > img {
+  height: 2.5vmax;
+  border-radius: 3px;
+}
+
+/* footer {
   margin-top: 10vmax;
   padding: 2vmax;
   background-color: rgb(34, 33, 33);
@@ -70,4 +240,4 @@ footer {
 
 .rightFooter > a:hover {
   color: #eb4034;
-}
+} */
