--- a/frontend/src/component/layout/Header/Header.css
+++ b/frontend/src/component/layout/Header/Header.css
@@ -8,7 +8,9 @@
 }
 
 header {
-  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 4;
   display: flex;
   align-items: center;
   justify-content: space-between;
