--- a/frontend/src/component/Product/Products.css
+++ b/frontend/src/component/Product/Products.css
@@ -2,6 +2,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  margin-top: 8vh;
 }
 
 .filters {
@@ -48,7 +49,7 @@
 }
 
 .greyContainer {
-  background: rgb(241, 241, 241);
+  background: rgb(243,244,244);
   width: 96%;
   border-radius: 30px;
   margin: 1vmax auto;
