--- a/frontend/src/component/User/LoginSignUp.css
+++ b/frontend/src/component/User/LoginSignUp.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+
 .LoginSignUpContainer {
   width: 100vw;
   height: 100vh;
@@ -5,7 +14,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(231, 231, 231);
+  background-color: rgb(241, 241, 241);
   position: fixed;
   top: 0%;
   left: 0;
@@ -13,10 +22,12 @@
 
 .LoginSignUpBox {
   background-color: white;
-  width: 25vw;
+  width: 30vw;
   height: 70vh;
   box-sizing: border-box;
   overflow: hidden;
+  border: none;
+  box-shadow: 5px 10px 18px #888888;
 }
 .login_signUp_toggle {
   display: flex;
@@ -24,19 +35,19 @@
 }
 .login_signUp_toggle > p {
   color: rgba(0, 0, 0, 0.678);
-  font: 300 1vmax "Roboto";
   transition: all 0.5s;
   cursor: pointer;
   display: grid;
+  font-weight: bolder;
   place-items: center;
   width: 100%;
 }
 .login_signUp_toggle > p:hover {
-  color: tomato;
+  color: black;
 }
 
 .LoginSignUpBox > div > button {
-  background-color: tomato;
+  background-color: black;
   height: 3px;
   width: 50%;
   border: none;
@@ -71,11 +82,11 @@
   padding-right: 1vmax;
   width: 100%;
   box-sizing: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.267);
-  border-radius: 4px;
-  font: 300 0.9vmax cursive;
-  outline: none;
+  border: 1px solid rgba(161, 161, 161, 0.267);
+  /* outline: none; */
 }
+
+
 
 .loginForm > div > svg,
 .signUpForm > div > svg {
@@ -90,7 +101,6 @@
   text-decoration: none;
   align-self: flex-end;
   transition: all 0.5s;
-  font: 500 0.8vmax "Gill Sans";
 }
 
 .loginForm > a:hover {
@@ -113,7 +123,6 @@
   height: 5vh;
   border: none;
   margin: 0%;
-  font: 400 0.8vmax cursive;
   transition: all 0.5s;
   padding: 0 1vmax;
   color: rgba(0, 0, 0, 0.623);
@@ -127,21 +136,19 @@
 .loginBtn,
 .signUpBtn {
   border: none;
-  background-color: tomato;
+  background-color: black;
   color: white;
-  font: 300 0.9vmax "Roboto";
   width: 100%;
   padding: 0.8vmax;
   cursor: pointer;
   transition: all 0.5s;
-  border-radius: 4px;
   outline: none;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.219);
 }
 
 .loginBtn:hover,
 .signUpBtn:hover {
-  background-color: rgb(179, 66, 46);
+  background-color: rgb(77, 76, 76)
 }
 
 .shiftToLeft {
@@ -171,7 +178,6 @@
     height: 5vmax;
   }
   .login_signUp_toggle > p {
-    font: 300 1.5vmax "Roboto";
   }
 
   .loginForm,
@@ -182,7 +188,6 @@
   .loginForm > div > input,
   .signUpForm > div > input {
     padding: 2.5vmax 5vmax;
-    font: 300 1.7vmax cursive;
   }
 
   .loginForm > div > svg,
@@ -191,7 +196,6 @@
   }
 
   .loginForm > a {
-    font: 500 1.8vmax "Gill Sans";
   }
 
   #registerImage > img {
@@ -201,12 +205,10 @@
 
   #registerImage > input::file-selector-button {
     height: 7vh;
-    font: 400 1.8vmax cursive;
   }
 
   .loginBtn,
   .signUpBtn {
-    font: 300 1.9vmax "Roboto";
     padding: 1.8vmax;
   }
 }
