--- a/frontend/src/component/User/Profile.css
+++ b/frontend/src/component/User/Profile.css
@@ -8,17 +8,21 @@
 }
 
 .profilePage {
-  background-color: rgb(240, 240, 240);
-  height: 100%;
-  width: 100%;
+  position: absolute;
+  background-color: rgb(243,244,244);
+  height: 100vh;
+  width: 100vw;
+  margin-top: 8vh;
+  overflow: visible;
 }
 .parent > div{
   position: relative;
-  top: 73px;
+  top: 0;
   display: flex;
   flex-direction: row;
   align-items: center;
   width: 70%;
+  padding-top: 2.5vh;
   margin-left: 15%;
   margin-right: 15%;
   justify-content: space-between;
@@ -41,6 +45,8 @@
 .parent > div > a:hover {
   font-size: 12px;
   text-decoration: underline;
+  cursor: pointer;
+  font-weight: bolder;
 }
 
 .parent > h1 {
@@ -66,7 +72,7 @@
 }
 
 .OrderContainer {
-  background-color: rgb(240, 240, 240);
+  background-color: rgb(243,244,244);
   width: 100%;
   height: 330px;
   align-items: center;
@@ -161,6 +167,7 @@
 .shippingAddr > a {
   text-decoration: none;
   color: rgb(4, 4, 245);
+  cursor: pointer;
 }
 
 .shippingAddr > a:hover {
@@ -179,6 +186,7 @@
 
 .contactInfo > a:hover {
   text-decoration: underline;
+  cursor: pointer;
 }
 
 .privacyInfo {
@@ -231,6 +239,187 @@
 
 .EcomIDContainer > a:hover {
   text-decoration: underline;
+}
+
+/* Dialog CSS */
+
+body.active-modal {
+    overflow-y: hidden;
+}
+
+.btn-modal {
+    padding: 10px 20px;
+    display: block;
+    margin: 100px auto 0;
+    font-size: 18px;
+}
+
+.modal, .overlay {
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: fixed;
+    overflow: hidden;
+}
+
+.overlay {
+    background: rgba(49,49,49,0.8);
+    overflow: hidden;
+}
+.modal-content {
+    position: absolute;
+    top: 40%;
+    left: 50%;  
+    margin-top: 14vh;
+    transform: translate(-50%, -50%);
+    /* line-height: 1.4; */
+    background: white;
+    padding: 6vh 7vw;
+    border-radius: 20px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    visibility: visible;
+}
+
+.modal-content > h1 {
+  padding-bottom: 4vh;
+}
+
+.modal-content > input {
+  border-radius: 10px;
+  padding: 2vh 1vw;
+  margin-bottom: 1vh;
+  border: 1px solid rgb(181, 181, 181);
+}
+
+.SaveBtn {
+  border-radius: 10px;
+  padding: 1.5vh 1vw;
+  margin-top: 1vh;
+  background-color: #0474e4;
+  color: white;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+}
+
+.CancelBtn {
+  border-radius: 10px;
+  padding: 1.5vh 1vw;
+  margin-top: 1vh;
+  color: #0474e4;
+  font-weight: bold;
+  background-color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.close-modal {
+    position: absolute;
+    top: 2.2vh;
+    left: 1.2vw;
+    font-size: larger;
+    color: rgb(74, 74, 74);
+    border: none;
+    background-color: rgb(148, 148, 148);
+    border-radius: 400px;
+    padding-top: 0.4vh;
+    padding-left: 0.3vw;
+    padding-right: 0.3vw;
+}
+
+.close-modal:hover {
+  color: black;
+  cursor: pointer;
+}
+
+/* 2nd Modal */
+
+.btn-modal2 {
+  padding: 10px 20px;
+  display: block;
+  margin: 100px auto 0;
+  font-size: 18px;
+}
+
+.modal2, .overlay2 {
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+}
+
+.overlay2 {
+  background: rgba(49,49,49,0.8);
+}
+.modal-content2 {
+  position: absolute;
+  top: 40%;
+  left: 50%;  
+  margin-top: 14vh;
+  transform: translate(-50%, -50%);
+  /* line-height: 1.4; */
+  background: white;
+  padding: 6vh 7vw;
+  border-radius: 20px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-content2 > h1 {
+padding-bottom: 4vh;
+}
+
+.modal-content2 > input {
+border-radius: 10px;
+padding: 2vh 1vw;
+margin-bottom: 1vh;
+border: 1px solid rgb(181, 181, 181);
+}
+
+.SaveBtn2 {
+border-radius: 10px;
+padding: 1.5vh 1vw;
+margin-top: 1vh;
+background-color: #0474e4;
+color: white;
+font-weight: bold;
+border: none;
+cursor: pointer;
+}
+
+.CancelBtn2 {
+border-radius: 10px;
+padding: 1.5vh 1vw;
+margin-top: 1vh;
+color: #0474e4;
+font-weight: bold;
+background-color: white;
+border: none;
+cursor: pointer;
+}
+
+.close-modal2 {
+  position: absolute;
+  top: 2.2vh;
+  left: 1.2vw;
+  font-size: larger;
+  color: gray;
+  border: none;
+  background-color: white;
+}
+
+.close-modal2:hover {
+color: black;
+cursor: pointer;
 }
 
 
