--- a/frontend/src/component/Cart/ConfirmOrder.css
+++ b/frontend/src/component/Cart/ConfirmOrder.css
@@ -1,7 +1,8 @@
 .confirmOrderPage {
-  height: 100%;
+  min-height: 90vh;
   background-color: rgb(241, 241, 241);
   display: flex;
+  padding-top: 5vh;
 }
 
 .left {
