--- a/frontend/src/component/Cart/Shipping.css
+++ b/frontend/src/component/Cart/Shipping.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
+body {
+  margin-top: 10vh;
+}
+
 .shippingContainer {
   width: 100vw;
   max-width: 100%;
