--- a/frontend/src/component/layout/Header/Header.css
+++ b/frontend/src/component/layout/Header/Header.css
@@ -7,7 +7,7 @@
   font-family: 'Poppins', sans-serif;
 }
 
-header {
+/* header {
   position: fixed;
   top: 0;
   left: 0;
@@ -23,33 +23,13 @@ header {
   overflow: hidden;
   background-color: black;
   color: white;
-}
+} */
 
-.logo {
+/* .logo {
   position: fixed;
-  /* position: sticky; */
   left: 0;
   margin-left: 3vmax;
 }
-
-/* header h3 {
-  position: relative;
-  float: left;
-} */
-
-/* header nav {
-  display: flex;
-  align-items: flex-end;
-  align-items: center;
-  margin-left: 60%;
-  overflow: hidden;
-  width: 100vw;
-} */
-
-/* .navContent {
-  position: relative;
-  right: 0;
-} */
 
 .searchBtn {
   position: fixed;
@@ -137,13 +117,6 @@ nav.hide {
 	pointer-events: none;
 }
 
-/* nav a {
-  margin: 0 2rem;
-  color: azure;
-  text-decoration: none;
-  opacity: 0.7;
-} */
-
 nav button:hover {
   opacity: 1;
   cursor: pointer;
@@ -154,7 +127,6 @@ header .logo {
 }
 
 header .nav-btn {
-  /* padding: 5px; */
   cursor: pointer;
   background: transparent;
   border: none;
@@ -214,20 +186,14 @@ header .orange_nav {
 }
 
 .minicon1 {
-  /* margin-left: 16px;
-  margin-bottom: -7px; */
   font-size: large;
 }
 
 .minicon2 {
-  /* margin-left: 8px;
-  margin-bottom: -7px; */
   font-size: large;
 }
 
 .minicon3 {
-  /* margin-left: 12px;
-  margin-bottom: -7px; */
   font-size: large;
 }
 
@@ -330,4 +296,83 @@ header .orange_nav {
   nav a{
     font-size: 1.5rem;
   }
+} */
+
+
+header {
+  /* transition: all 00ms ease-in-out; */
+  z-index: 9999;
 }
+
+nav {
+  position: fixed;
+  top: 0;
+  z-index: 99999;
+  width: 100%;
+  height: 10vh;
+  display: flex;
+  justify-content: space-between;
+  background: black;
+  color: white;
+}
+
+.leftNav {
+  height: 100%;
+  padding: 0 2vmax;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.rightNav {
+  height: 100%;
+  display: flex;
+}
+
+.navBtns {
+  display: flex;
+  width: 30vw;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 2vmax;
+}
+
+.navBtns > button {
+  background: transparent;
+  color: white;
+  border: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.navBtns > button:hover {
+  cursor: pointer;
+}
+
+.navIcon {
+  font-size: 1.5vmax;
+  margin-top: 0.1vmax;
+}
+
+.navIconCart {
+  font-size: 1.5vmax;
+}
+
+.navIconUser {
+  font-size: 1.5vmax;
+}
+
+.navIconSearch {
+  font-size: 1.39vmax;
+}
+
+
+/* Scroll */
+.scroll-down header {
+  transform: translate3d(0, -100%, 0);
+}
+
+/* .scroll-up header {
+  filter: drop-shadow(0 -10px 20px rgb(170,170,170));
+} */
