--- a/frontend/src/component/layout/Not Found/NotFound.css
+++ b/frontend/src/component/layout/Not Found/NotFound.css
@@ -2,7 +2,7 @@
   margin: auto;
   text-align: center;
   padding: 10vmax;
-  height: 50vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -10,20 +10,26 @@
 }
 .PageNotFound > svg {
   font-size: 7vmax;
-  color: tomato;
+  color: black;
 }
 .PageNotFound > p {
-  font-size: 2vmax;
+  font: 2vmax Poppins;
 }
 .PageNotFound > a {
-  background-color: rgb(51, 51, 51);
+  background-color: black;
   color: white;
   border: none;
-  padding: 1vmax 3vmax;
+  padding: 0.8vmax 3vmax;
   cursor: pointer;
-  font: 400 1vmax "Roboto";
+  font: 1.5vmax Poppins;
   text-decoration: none;
   margin: 2vmax;
+  border-radius: 7px;
+}
+
+.PageNotFound > a:hover {
+  background: rgb(41, 41, 41);
+  cursor: pointer;
 }
 
 @media screen and (max-width: 600px) {
