--- a/frontend/src/component/User/Profile.css
+++ b/frontend/src/component/User/Profile.css
@@ -8,16 +8,11 @@
 }
 
 .profilePage {
-  position: absolute;
   background-color: rgb(243,244,244);
-  height: 100vh;
-  width: 100vw;
   margin-top: 8vh;
-  overflow: visible;
 }
+
 .parent > div{
-  position: relative;
-  top: 0;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -31,13 +26,13 @@
 
 .parent > div > h2 {
   font-size: 20px;
-  padding-bottom: 7px;
+  padding-bottom: 0.5vh;
 }
 
 .parent > div > a {
   font-size: 12px;
   text-decoration: none;
-  padding-bottom: 7px;
+  padding-bottom: 0.5vh;
   transition: all 0.5s;
   color: black;
 }
@@ -50,33 +45,33 @@
 }
 
 .parent > h1 {
-  margin-top: 120px;
-  margin-left: 232px;
-  margin-bottom: 25px;
+  margin-top: 15vh;
+  margin-left: 15.2vw;
+  margin-bottom: 4vh;
 }
 
 .ProfileOrder {
   background-color: white;
   width: 100%;
-  height: 260px;
+  height: 33vh;
 }
 
 .ProfileOrder > h1 {
-  margin-left: 232px;
-  padding-top: 65px;
+  margin-left: 15.2vw;
+  padding-top: 9vh;
 }
 
 .ProfileOrder > h4 {
-  margin-left: 234px;
-  padding-top: 25px;
+  margin-left: 15.4vw;
+  padding-top: 2.5vh;
 }
 
 .OrderContainer {
   background-color: rgb(243,244,244);
   width: 100%;
-  height: 330px;
+  height: auto;
   align-items: center;
-  padding: 40px;
+  padding: 2.5vmax;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -86,18 +81,18 @@
   background-color: white;
   width: 30vmax;
   height: 17vmax;
-  margin-left: 245px;
+  margin-left: 16vw;
   border-radius: 5px;
-  padding-top: 38px;
-  padding-left: 40px;
+  padding-top: 5vh;
+  padding-left: 2.6vw;
 }
 
 .orderCard > h1 {
-  margin-bottom: 10px;
+  margin-bottom: 1vh;
 }
 
 .orderCard > p {
-  margin-bottom: 10px;
+  margin-bottom: 1vh;
 }
 
 .orderCard > a {
@@ -113,19 +108,19 @@
   background-color: white;
   width: 30vmax;
   height: 17vmax;
-  margin-right: 245px;
+  margin-right: 16vw;
   border-radius: 5px;
-  padding-top: 38px;
-  padding-left: 35px;
-  padding-right: 28px;
+  padding-top: 5vh;
+  padding-left: 2.6vw;
+  padding-right: 2vw;
 }
 
 .soCard > h1 {
-  margin-bottom: 10px;
+  margin-bottom: 1vh;
 }
 
 .soCard > p {
-  margin-bottom: 10px;
+  margin-bottom: 1vh;
 }
 
 .soCard > a {
@@ -139,14 +134,13 @@
 
 .accountSettings {
   width: 100%;
-  height: 600px;
+  height: 75vh;
   background-color: white;
-
 }
 
 .accountSettings > h1 {
-  margin-left: 232px;
-  padding-top: 70px;
+  margin-left: 15.2vw;
+  padding-top: 9vh;
 }
 
 .shippingInfo {
@@ -155,13 +149,13 @@
 }
 
 .shippingInfo > div > h2 {
-  margin-left: 232px;
-  padding-top: 40px;
+  margin-left: 15.2vw;
+  padding-top: 5vh;
 }
 
 .shippingAddr {
-  padding-top: 45px;
-  padding-left: 190px;
+  padding-top: 5.7vh;
+  padding-left: 11.6vw;
 }
 
 .shippingAddr > a {
@@ -175,8 +169,8 @@
 }
 
 .contactInfo {
-  padding-top: 45px;
-  padding-left: 100px;
+  padding-top: 5.8vh;
+  padding-left: 6.5vw;
 }
 
 .contactInfo > a {
@@ -195,13 +189,13 @@
 }
 
 .privacyInfo > div > h2 {
-  margin-left: 232px;
-  padding-top: 40px;
+  margin-left: 15.2vw;
+  padding-top: 5vh;
 }
 
 .PIContainer {
-  padding-top: 45px;
-  padding-left: 207px;
+  padding-top: 6vh;
+  padding-left: 12.8vw;
 }
 
 .PIContainer > a {
@@ -219,13 +213,13 @@
 }
 
 .EcomIDInfo > div > h2 {
-  margin-left: 232px;
-  padding-top: 40px;
+  margin-left: 15.2vw;
+  padding-top: 5vh;
 }
 
 .EcomIDContainer {
-  padding-top: 45px;
-  padding-left: 195px;
+  padding-top: 6vh;
+  padding-left: 12.1vw;
 }
 
 .EcomIDContainer > p {
