--- a/frontend/src/component/layout/Footer/Footer.css
+++ b/frontend/src/component/layout/Footer/Footer.css
@@ -3,6 +3,10 @@
 footer {
   display: flex;
   flex-direction: column;
+  /* bottom: 0;
+    left: 0;
+    right: 0;
+    position: relative; */
 }
 
 .top {
